summary and transaction detail changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ json.validator.file=/summary.json
 message=File downloaded successfully
 billingsummaryfile=billingSummaryFile.csv
 totalrecords=50
+transactiondetailfile=transactiondetailfile.csv
 #log4j.category.org.springframework.jdbc.core = DEBUG
